Simplify things a little

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: base
 ---
 <section>
 	<div class="container">
-		<div class="is-row">
+		<div class="is-row is-items-middle">
 			<div class="is-col is-30">
 				<img class="landing-page-img" style="border-radius: 100%" src="/images/danielball.png">
 			</div>
